chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-app-ingress
  labels:
    app: voting-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: vote-app-chart
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: result
                port:
                  number: 80
          - path: /vote/*
            pathType: Prefix
            backend:
              service:
                name: vote-service
                port:
                  number: 80
